[package]
name = "nugetlon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.71"
xml="0.8.10"
minidom="0.15.2"
minidom_writer="1.0.0"
xmltree={ version = "0.10.3", features = ["attribute-order"] }